--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile 'com.google.maps.android:android-maps-utils:0.4+'
+    compile 'com.squareup.okhttp3:okhttp:3.+'
 
 
 }
