--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -44,13 +45,14 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
-        <service android:name=".services.WebsocketService"
-            android:exported="false"
-            android:description="@string/WsServiceDescription"/>
+        <service
+            android:name=".services.WebsocketService"
+            android:description="@string/WsServiceDescription"
+            android:exported="false" />
 
-
+        <activity android:name=".activities.AirDetailsActivity"></activity>
     </application>
 
 </manifest>
